<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">


    <ImageButton
        android:id="@+id/left_button"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="129dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/left_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/word_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textureView" />

    <ImageButton
        android:id="@+id/right_button"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="129dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/right_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toEndOf="@+id/word_icon"
        app:layout_constraintTop_toBottomOf="@+id/textureView" />

    <ImageView
        android:id="@+id/word_icon"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:layout_marginTop="138dp"
        android:layout_marginBottom="129dp"
        android:adjustViewBounds="true"
        android:background="@color/colorPrimary"
        android:scaleType="fitCenter"
        android:src="@drawable/help_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/right_button"
        app:layout_constraintStart_toEndOf="@+id/left_button"
        app:layout_constraintTop_toBottomOf="@+id/textureView" />

    <androidx.camera.view.PreviewView
        android:id="@+id/textureView"
        android:layout_width="match_parent"
        android:layout_height="384dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>